1.Changes in css reagrding issue of overlapping

--- a/VAS/Areas/VAS/Content/VAS_PurchaseOrderTabPanel.css
+++ b/VAS/Areas/VAS/Content/VAS_PurchaseOrderTabPanel.css
@@ -147,7 +147,7 @@ span.vis.vis-info.vas-openItem {
     font-size: 12px;
     font-weight: 500;
     margin: 0 0 2px;
-    max-width: 180px;
+    max-width: 150px;
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
@@ -157,7 +157,7 @@ span.vis.vis-info.vas-openItem {
     font-size: 0.875rem;
     font-weight: 500;
     margin: 0 0 2px;
-    max-width: 180px;
+    max-width: 150px;
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
